--- a/src/app/components/dashboard/manage-posts/manage-posts.component.html
+++ b/src/app/components/dashboard/manage-posts/manage-posts.component.html
@@ -1,1 +1,56 @@
-<p>manage-posts works!</p>
+<div class="dashboard-pages-container">
+  <h2 class="section-title">Manage Posts</h2>
+
+  <div *ngIf="loading" class="spinner-overlay">
+    <div class="spinner"></div>
+    <p>Loading profile...</p>
+  </div>
+
+  <table class="dashboard-pages-table" *ngIf="posts.length > 0">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Created At</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let post of posts; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>
+          <a [routerLink]="['/post']" [queryParams]="{ postId: post.id }">
+            {{ post.title | slice : 0 : 30 }}
+          </a>
+        </td>
+        <td>
+          <a
+            [routerLink]="['/user-profile']"
+            [queryParams]="{ username: post.authorName }"
+          >
+            &#64;{{ post.authorName }}
+          </a>
+        </td>
+        <td>{{ post.createdDate | date : "yyyy-MM-dd HH:mm" }}</td>
+        <td>
+          <button
+            class="delete-button"
+            (click)="onDeleteAccount(post.id)"
+            title="Delete Post"
+          >
+            Delete
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div *ngIf="posts.length === 0 && !loading" class="no-results">
+    <p>No posts available.</p>
+  </div>
+
+  <div class="centered-link" *ngIf="currentPage < totalPages && !loading">
+    <a (click)="loadMorePosts()">Load More Posts &gt;</a>
+  </div>
+</div>
