--- a/src/app/components/dashboard/manage-users/manage-users.component.scss
+++ b/src/app/components/dashboard/manage-users/manage-users.component.scss
@@ -1,92 +1,48 @@
-.manage-users {
-  padding: 2rem;
+.edit-input,
+.edit-select {
+  width: 90%;
+  padding: 0.4rem;
+  font-size: 0.9rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
-  .section-title {
-    font-size: 1.8rem;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 1.5rem;
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.btn {
+  margin-right: 0.5rem;
+  padding: 0.4rem 0.8rem;
+  font-size: 0.85rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-transform: uppercase;
+
+  &.btn-primary {
+    background-color: #007bff;
+    color: #fff;
   }
 
-  .users-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 0 auto;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-    th,
-    td {
-      padding: 0.8rem 1rem;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-
-    th {
-      background-color: #f8f9fa;
-      font-weight: bold;
-      text-transform: uppercase;
-      font-size: 0.9rem;
-      text-align: center;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-    a {
-      color: #007bff;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-    .edit-input,
-    .edit-select {
-      width: 90%;
-      padding: 0.4rem;
-      font-size: 0.9rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .btns {
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-    }
-
-    .btn {
-      margin-right: 0.5rem;
-      padding: 0.4rem 0.8rem;
-      font-size: 0.85rem;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      text-transform: uppercase;
-
-      &.btn-primary {
-        background-color: #007bff;
-        color: #fff;
-      }
-
-      &.btn-success {
-        background-color: #28a745;
-        color: #fff;
-      }
-
-      &.btn-danger {
-        background-color: #dc3545;
-        color: #fff;
-      }
-
-      &:hover {
-        opacity: 0.9;
-      }
-    }
+  &.btn-success {
+    background-color: #28a745;
+    color: #fff;
   }
 
-  .no-results {
-    text-align: center;
-    font-size: 1.1rem;
-    color: #999;
+  &.btn-danger {
+    background-color: #dc3545;
+    color: #fff;
   }
+
+  &:hover {
+    opacity: 0.9;
+  }
+}
+
+input {
+  width: 100%;
+  padding: 5px 10px;
 }
