--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
     </li>
     <li>
       <a routerLink="/dashboard/register-user" routerLinkActive="active"
-        ><i class="fas fa-user-plus"></i> Register User</a
+        ><i class="fas fa-user-plus"></i> Add User</a
       >
     </li>
   </ul>
