--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -73,6 +73,42 @@
             </div>
           </div>
 
+          <div>
+            <label for="imageFile">Change Image (Optional):</label>
+            <input
+              type="file"
+              id="imageFile"
+              (change)="onImageFileChange($event)"
+            />
+          </div>
+
+          <div>
+            <label for="videoFile">Change Video (Optional):</label>
+            <input
+              type="file"
+              id="videoFile"
+              (change)="onVideoFileChange($event)"
+            />
+          </div>
+
+          <div class="delete-media">
+            <input
+              type="checkbox"
+              id="deleteImage"
+              formControlName="deleteImage"
+            />
+            <label for="deleteImage">Delete existing image</label>
+          </div>
+
+          <div class="delete-media">
+            <input
+              type="checkbox"
+              id="deleteVideo"
+              formControlName="deleteVideo"
+            />
+            <label for="deleteVideo">Delete existing video</label>
+          </div>
+
           <div class="form-btns">
             <button type="submit" [disabled]="updatePostForm.invalid">✓</button>
             <button class="cancel-btn" (click)="isEditingPost = false">
@@ -92,6 +128,23 @@
           >
         </p>
         <p class="post-content">{{ post.content }}</p>
+        <div class="media">
+          <img
+            *ngIf="post.imageUrl"
+            [src]="post.imageUrl"
+            alt="Post Image"
+            class="post-image"
+          />
+          <video
+            *ngIf="post.videoUrl"
+            [src]="post.videoUrl"
+            controls
+            class="post-video"
+          >
+            Your browser does not support the video tag.
+          </video>
+        </div>
+
         <p class="post-date">
           Created: {{ post.createdDate | date : "medium" }}
           <br />
