--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -121,3 +121,44 @@ button {
     }
   }
 }
+.delete-media {
+  display: flex;
+  margin: 5px 0;
+  gap: 10px;
+  input[type="checkbox"] {
+    width: 18px;
+    height: 18px;
+    border-radius: 4px;
+    border: 2px solid #ccc;
+    appearance: none;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    &:checked {
+      background-color: #4caf50;
+      border-color: #4caf50;
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        left: 4px;
+        top: 2px;
+        width: 4px;
+        height: 7px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        transform: rotate(47deg);
+      }
+    }
+  }
+  label {
+    font-size: 14px;
+    color: #333;
+    cursor: pointer;
+    user-select: none;
+    font-weight: 500;
+    transition: color 0.2s ease;
+    &:hover {
+      color: #4caf50;
+    }
+  }
+}
