--- a/src/app/components/dashboard/manage-posts/manage-posts.component.html
+++ b/src/app/components/dashboard/manage-posts/manage-posts.component.html
@@ -20,15 +20,12 @@
       <tr *ngFor="let post of posts; let i = index">
         <td>{{ i + 1 }}</td>
         <td>
-          <a [routerLink]="['/post']" [queryParams]="{ postId: post.id }">
+          <a [routerLink]="['/post', post.id]">
             {{ post.title | slice : 0 : 30 }}
           </a>
         </td>
         <td>
-          <a
-            [routerLink]="['/user-profile']"
-            [queryParams]="{ username: post.authorName }"
-          >
+          <a [routerLink]="['/user-profile', post.authorName]">
             &#64;{{ post.authorName }}
           </a>
         </td>
