--- a/src/app/components/dashboard/manage-users/manage-users.component.html
+++ b/src/app/components/dashboard/manage-users/manage-users.component.html
@@ -46,8 +46,7 @@
         </td>
         <td>
           <a
-            [routerLink]="['/user-profile']"
-            [queryParams]="{ username: user.userName }"
+            [routerLink]="['/user-profile', user.userName]"
           >
             &#64;{{ user.userName }}
           </a>
