--- a/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -23,13 +23,18 @@
     padding: 0;
     li {
       padding: 15px;
-      text-align: center;
+      text-align: left;
       transition: 0.3s;
 
       a {
         color: white;
         text-decoration: none;
         display: block;
+        i {
+          width: 15px;
+          font-size: 15px;
+          margin-right: 10px;
+        }
       }
 
       &:hover {
