--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,16 @@
 <header *ngIf="this.isLoggedIn()">
   <div class="logo">
-    <!-- <h1><a routerLink="/">Smart Devices Store</a></h1> -->
-    <a routerLink="/home"><img src="/assets/image/logo.jpg" alt="logo" /></a>
+    <a routerLink="/home"
+      ><img src="/assets/image/Aqqrablogo.jpg" alt="logo"
+    /></a>
   </div>
   <nav>
-    <span class="icon" id="menu-icon" (click)="toggleMenu()">
+    <span class="icon" id="menu-icon" (click)="toggleMenu()" #mobileMenuButton>
       <span></span>
       <span></span>
       <span></span>
     </span>
-    <ul id="nav-menu" [class.show]="isMenuOpen">
+    <ul id="nav-menu" [class.show]="isMenuOpen" #mobileNav>
       <li (click)="isMenuOpen = false"><a routerLink="/home">Home</a></li>
       <li (click)="isMenuOpen = false"><a routerLink="/search">Search</a></li>
       <li (click)="isMenuOpen = false">
