--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -40,7 +40,7 @@ header {
 
 @media (max-width: 792px) {
   header {
-    height: 36px;
+    height: 5vh;
     nav {
       .icon {
         display: flex;
@@ -80,7 +80,7 @@ header {
         right: 0;
         width: 100%;
         gap: 5px;
-        background-color: #898b8e;
+        background-color: #fff;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         z-index: 1000;
         &.show {
@@ -89,9 +89,9 @@ header {
         li {
           width: 100%;
           text-align: center;
-          transition: background-color 0.2s;
+          transition: 0.3s;
           :hover {
-            background-color: #34495e;
+            background-color: rgb(181, 181, 183);
           }
           a {
             color: #333;
@@ -99,7 +99,7 @@ header {
             display: block;
             padding: 5px 10px;
             &:hover {
-              color: #007bff;
+              color: #000;
             }
           }
         }
