--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 <div class="content">
   <main>
     <router-outlet></router-outlet>
+    <app-scroll-to-top></app-scroll-to-top>
   </main>
 </div>
