--- a/src/app/components/dashboard/main-view/main-view.component.html
+++ b/src/app/components/dashboard/main-view/main-view.component.html
@@ -55,9 +55,8 @@
     <table class="dashboard-table">
       <thead>
         <tr>
-          <th>Title</th>
-          <th>Author</th>
           <th>Content</th>
+          <th>Author</th>
           <th>Date</th>
         </tr>
       </thead>
@@ -65,7 +64,7 @@
         <tr *ngFor="let post of posts">
           <td>
             <a [routerLink]="['/post', post.id]">
-              {{ post.title }}
+              {{ post.content | slice : 0 : 30 }}...
             </a>
           </td>
           <td>
@@ -73,7 +72,6 @@
               &#64;{{ post.authorName }}
             </a>
           </td>
-          <td>{{ post.content | slice : 0 : 30 }}...</td>
           <td>{{ post.createdDate | date : "yyyy-MM-dd HH:mm" }}</td>
         </tr>
       </tbody>
