--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,45 +1,121 @@
+$primary-color: #007bff;
+$hover-color: #0056b3;
 .new-post-form {
-  margin-bottom: 20px;
-  padding: 15px;
+  width: 100%;
+  margin: 20px auto;
+  padding: 20px;
   border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #f9f9f9;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #333;
+  .form-group {
+    margin-bottom: 15px;
   }
 
-  input,
   textarea {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
+    padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
-  }
+    border-radius: 6px;
+    font-size: 16px;
+    resize: none;
+    transition: border-color 0.3s;
 
-  button {
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-
-    &:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
+    &:focus {
+      border-color: #007bff;
+      outline: none;
     }
   }
 
   .error-message {
     color: #d9534f;
     font-size: 12px;
-    margin-top: -10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+  }
+
+  .upload-container {
+    display: flex;
+    gap: 10px;
+    margin: 15px 0;
+
+    .upload-btn {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 5px;
+      border: 2px dashed #007bff;
+      border-radius: 6px;
+      color: #007bff;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.4s;
+      font-size: 16px;
+
+      &:hover {
+        background: #007bff;
+        color: #fff;
+      }
+
+      i {
+        font-size: 20px;
+      }
+
+      input {
+        display: none;
+      }
+    }
+  }
+
+  button {
+    width: 100%;
+    padding: 12px;
+    background: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s;
+
+    &:hover {
+      background: #0056b3;
+    }
+
+    &:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
+
+    i {
+      margin-right: 5px;
+    }
+  }
+}
+
+.comments {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .count {
+    font-size: 0.9rem;
+    color: #666;
+    margin-bottom: 15px;
+    font-weight: 300;
+  }
+
+  .btn-toggle-comments {
+    // background-color: $primary-color;
+    color: $primary-color;
+    border: none;
+    // padding: 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: 0.3s ease;
+
+    &:hover {
+      color: $hover-color;
+    }
   }
 }
