--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -27,12 +27,11 @@
   >
     <h2>User's Posts</h2>
     <div class="post-card" *ngFor="let post of posts">
-      <h2 class="post-title">
+      <p class="post-content">
         <a [routerLink]="['/post', post.id]">
-          {{ post.title }}
+          {{ post.content }}
         </a>
-      </h2>
-      <p class="post-content">{{ post.content }}</p>
+      </p>
       <div class="media">
         <img
           *ngIf="post.imageUrl"
@@ -59,27 +58,22 @@
       <p class="post-date">
         <small>Comments: {{ post.comments.length }}</small>
       </p>
-      <div class="comments-section">
+      <div class="comments-section" *ngIf="post.comments.length > 0">
         <h3>Comments</h3>
-        <div *ngIf="post.comments.length > 0; else noComments">
-          <div
-            *ngFor="let comment of post.comments | slice : 0 : 2"
-            class="comment"
-          >
-            <p class="comment-user">
-              <a [routerLink]="['/user-profile', comment.userName]">{{
-                comment.userName
-              }}</a>
-            </p>
-            <p class="comment-content">{{ comment.content }}</p>
-            <p class="comment-date">
-              {{ comment.createdDate | date : "short" }}
-            </p>
-          </div>
+        <div
+          *ngFor="let comment of post.comments | slice : 0 : 2"
+          class="comment"
+        >
+          <p class="comment-user">
+            <a [routerLink]="['/user-profile', comment.userName]">{{
+              comment.userName
+            }}</a>
+          </p>
+          <p class="comment-content">{{ comment.content }}</p>
+          <p class="comment-date">
+            {{ comment.createdDate | date : "medium" }}
+          </p>
         </div>
-        <ng-template #noComments>
-          <p class="no-comments">No comments yet.</p>
-        </ng-template>
       </div>
     </div>
     <div class="pagination">
