--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -19,12 +19,16 @@
     >
       <h2>User's Posts</h2>
       <div class="post-card" *ngFor="let post of posts">
-        <h2 class="post-title">
+        <p class="post-content">
           <a [routerLink]="['/post', post.id]">
-            {{ post.title }}
+            <div>
+            <span *ngIf="post.content.length > 200"
+              >{{ post.content | slice : 0 : 200 }}...</span
+            >
+            <span *ngIf="post.content.length <= 200">{{ post.content }}</span>
+          </div>
           </a>
-        </h2>
-        <p class="post-content">{{ post.content }}</p>
+        </p>
         <div class="media">
           <img
             *ngIf="post.imageUrl"
