--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -1,4 +1,4 @@
-$primary-color: #4caf50;
+$primary-color: #007bff;
 $secondary-color: #f44336;
 $light-gray: #f1f1f1;
 $dark-gray: #6c757d;
@@ -6,26 +6,13 @@ $text-color: #333;
 $background-color: #f9f9f9;
 $heading-font: "Roboto", sans-serif;
 $body-font: "Open Sans", sans-serif;
-$border-radius: 8px;
+$border-radius: 10px;
 
-.loader {
-  font-family: $heading-font;
-  font-size: 1.5rem;
-  color: $primary-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  margin: 20px auto;
-  animation: fadeIn 1s ease-in-out;
-}
 .user-profile {
   background-color: white;
   padding: 20px;
   border-radius: $border-radius;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
-  width: 100%;
   margin: 20px auto;
   animation: fadeIn 1s ease-in-out;
 
@@ -33,7 +20,7 @@ $border-radius: 8px;
     font-family: $heading-font;
     font-size: 2rem;
     color: $primary-color;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     text-align: center;
   }
   h6 {
@@ -44,9 +31,10 @@ $border-radius: 8px;
 
   p {
     font-size: 1.1rem;
-    color: $text-color;
+    color: $dark-gray;
     margin: 10px 0;
     strong {
+      color: #000000;
       font-weight: bold;
     }
   }
@@ -96,4 +84,3 @@ $border-radius: 8px;
     font-size: 1rem;
   }
 }
-
