--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-// Color variables for easy customization
 $primary-color: #007bff;
 $secondary-color: #f1f1f1;
 $tertiary-color: #333;
@@ -225,6 +223,10 @@ main {
     margin-bottom: 20px;
     line-height: 1.6;
     word-wrap: break-word;
+    a {
+      text-decoration: none;
+      color: #333;
+    }
   }
 
   .post-date {
@@ -237,35 +239,22 @@ main {
       color: $primary-color;
     }
   }
-
-  .btn-toggle-comments {
-    background-color: $primary-color;
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-    margin-top: 15px;
-
-    &:hover {
-      background-color: $hover-color;
-    }
-  }
 }
 
 .media {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 1rem;
   align-items: center;
   flex-wrap: wrap;
   .post-image,
   .post-video {
+    width: 48%;
     max-width: 500px;
     height: auto;
     border-radius: 10px;
     margin: 10px 0;
+    flex-grow: 1;
   }
 }
 
@@ -295,6 +284,7 @@ main {
       a {
         text-decoration: none;
         color: $primary-color;
+        transition: 0.3s;
         &:hover {
           color: $hover-color;
           text-decoration: underline;
@@ -435,11 +425,6 @@ main {
   .post-author,
   .post-date {
     font-size: 0.9rem;
-  }
-
-  .post-image,
-  .post-video {
-    width: 100%;
   }
 
   .btn-toggle-comments {
